Color-profile property triggers assert https://bugs.webkit.org/show_bug.cgi?id=101080

Reviewed by Dirk Schulze.

Source/WebCore:

CSSPropertyColorProfile is not handled in StyleResolver::applySVGProperty(), triggering the
unimplemented property assert. Adding a stub entry to avoid that.

Test: svg/css/color-profile-crash.html

* css/SVGCSSStyleSelector.cpp:
(WebCore::StyleResolver::applySVGProperty):

LayoutTests:

* svg/css/color-profile-crash-expected.txt: Added.
* svg/css/color-profile-crash.html: Added.


Canonical link: https://commits.webkit.org/119255@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133420 268f45cc-cd09-0410-ab3c-d52691b4dbfc